{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 33,
  "lineage": "2babcac2-5ac8-015a-c88d-8efd42360b81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "puppet_agent",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0affd4508a5d2481b",
            "arn": "arn:aws:ec2:us-east-1:849794923516:instance/i-0cabad67389366728",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cabad67389366728",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-default-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027cf08002a3b495b",
            "private_dns": "ip-172-31-82-18.ec2.internal",
            "private_ip": "172.31.82.18",
            "public_dns": "ec2-3-236-50-58.compute-1.amazonaws.com",
            "public_ip": "3.236.50.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f82cd89915a09cd5",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "puppet_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ce0985c2",
            "tags": {
              "Name": "puppet_agent"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080ad37103341dbf1"
            ]
          },
          "dependencies": [
            "aws_security_group.puppet_sg_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "puppet_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0affd4508a5d2481b",
            "arn": "arn:aws:ec2:us-east-1:849794923516:instance/i-0170536e9c7aefc8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0170536e9c7aefc8e",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-default-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ccecee5f3e474723",
            "private_dns": "ip-172-31-88-198.ec2.internal",
            "private_ip": "172.31.88.198",
            "public_dns": "ec2-3-236-8-222.compute-1.amazonaws.com",
            "public_ip": "3.236.8.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0513cb119e6881549",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "puppet_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ce0985c2",
            "tags": {
              "Name": "puppet_master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080ad37103341dbf1"
            ]
          },
          "dependencies": [
            "aws_security_group.puppet_sg_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "puppet_sg_tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849794923516:security-group/sg-080ad37103341dbf1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080ad37103341dbf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "107.141.33.229/32"
                ],
                "description": "ssh connectivity",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "puppet_sg",
            "name_prefix": null,
            "owner_id": "849794923516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "puppet_sg_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-3a102f5d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_8140",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.236.8.222/32",
              "3.236.50.58/32"
            ],
            "description": "created via my_terraform repo",
            "from_port": 8140,
            "id": "sgrule-3480414112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080ad37103341dbf1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8140,
            "type": "ingress"
          },
          "dependencies": [
            "aws_instance.puppet_agent",
            "aws_instance.puppet_master",
            "aws_security_group.puppet_sg_tf"
          ]
        }
      ]
    }
  ]
}